--- a/proyect1/pom.xml
+++ b/proyect1/pom.xml
@@ -42,8 +42,12 @@
     <artifactId>mockito-all</artifactId>
     <version>1.8.4</version>
 </dependency>
-    
-    
+
+      <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>1.1.2</version>
+      </dependency>
   </dependencies>
   
   
