--- a/proyect1/pom.xml
+++ b/proyect1/pom.xml
@@ -58,7 +58,9 @@
             <version>3.0</version>
             <configuration>
                 <fork>true</fork>
-                <executable>C:\Program Files\Java\jdk1.8.0_111\bin\javac.exe</executable>
+                <executable>/opt/java/jdk1.8.0_20\bin\javac</executable>
+                <source>1.8</source>
+                <target>1.8</target>
             </configuration>
             </plugin>
             </plugins>
